--- a/theme_changer.html
+++ b/theme_changer.html
@@ -62,7 +62,7 @@
                 <div class="card book-card ">
                     <img src="https://bookcart.azurewebsites.net/Upload/b868eb26-f12c-4dcf-ba19-03e0d6cafb8d36373564.jpg" class="card-img-top" alt="Book Cover 1">
                     <div class="card-body">
-                        <h5 class="card-title">Book Title 1</h5>
+                        <h5 class="card-title">Book 1</h5>
                         <p class="card-text">Author: John Doe</p>
                         <p class="card-text">Category: Fiction</p>
                         <p class="card-text">Price: $19.99</p>
@@ -75,7 +75,7 @@
                 <div class="card book-card">
                     <img src="https://bookcart.azurewebsites.net/Upload/6d91b7b0-b8d1-41ad-a0ef-65e2324fc1b3Slayer.jpg" class="card-img-top" alt="Book Cover 2">
                     <div class="card-body">
-                        <h5 class="card-title">Book Title 2</h5>
+                        <h5 class="card-title">Book 2</h5>
                         <p class="card-text">Author: Jane Smith</p>
                         <p class="card-text">Category: Mystery</p>
                         <p class="card-text">Price: $24.99</p>
@@ -88,7 +88,7 @@
                 <div class="card book-card">
                     <img src="https://bookcart.azurewebsites.net/Upload/5b7162d6-2780-461b-be6f-e4debac083ad18007564.jpg" class="card-img-top" alt="Book Cover 3">
                     <div class="card-body">
-                        <h5 class="card-title">Book Title 3</h5>
+                        <h5 class="card-title">Book 3</h5>
                         <p class="card-text">Author: Alex Johnson</p>
                         <p class="card-text">Category: Science Fiction</p>
                         <p class="card-text">Price: $29.99</p>
@@ -101,7 +101,7 @@
                 <div class="card book-card">
                     <img src="https://bookcart.azurewebsites.net/Upload/3d894fa1-8746-4443-b244-99624cc39f1fq1we.jpg" class="card-img-top" alt="Book Cover 4">
                     <div class="card-body">
-                        <h5 class="card-title">Book Title 4</h5>
+                        <h5 class="card-title">Book 4</h5>
                         <p class="card-text">Author: Sarah Lee</p>
                         <p class="card-text">Category: Romance</p>
                         <p class="card-text">Price: $15.99</p>
